added facebook and twitter support

--- a/app/views/account/login_form.jade
+++ b/app/views/account/login_form.jade
@@ -1,6 +1,6 @@
 form(action='/login', method='POST')
   .control-group
-    label(for='email') eMail
+    label(for='email') Email
     input(type='text', name='email')
   .control-group
     label(for='password') Password
