--- a/app/views/account/show.jade
+++ b/app/views/account/show.jade
@@ -1,3 +1,7 @@
-div User: #{user.email}
+h1 Welcome #{user.name} #{user.twitter.twitterUsername} #{user.facebook.name}
+
+#block
+  p User email: #{user.email} #{user.facebook.email} 
+  p 
 
 a(href = urlFor({ controller: 'account', action: 'logout' })) Logout
