--- a/app/views/pages/main.jade
+++ b/app/views/pages/main.jade
@@ -1,1 +1,8 @@
 h2 Welcome to #{title}
+a(href="/login") Login
+br
+a(href="/auth/twitter/") Twitter
+br
+a(href="/auth/facebook/") Facebook
+br
+a(href="/account/new") Sign Up
