--- a/app/views/account/login_form.jade
+++ b/app/views/account/login_form.jade
@@ -1,7 +1,7 @@
 form(action='/login', method='POST')
   .control-group
-    label(for='email') Email
-    input(type='text', name='email')
+    label(for='login') Username, Email, or Phone
+    input(type='text', name='login')
   .control-group
     label(for='password') Password
     input(type='password', name='password')
