--- a/app/views/account/new.jade
+++ b/app/views/account/new.jade
@@ -1,15 +1,20 @@
 form(action=accountURL(), method='POST')
   .control-group
-    label(for='email') eMail
-    input(type='text', name='email')
+    label(for='name') Name*
+    input(type='text', name='name')
   .control-group
-    label(for='password') Password
+    label(for='username') Username#
+    input(type='text', name='username')          
+  .control-group
+    label(for='email') Email#
+    input(type='email', name='email')
+  .control-group
+    label(for='phone') Phone#
+    input(type='phone', name='phone')
+  .control-group
+    label(for='password') Password*
     input(type='password', name='password')
-  .control-group
-    label(for='name.first') First Name
-    input(type='text', name='name.first')
-  .control-group
-    label(for='name.last') Last Name
-    input(type='text', name='name.last')
   .form-actions
     button.btn.btn-primary(type='submit') Register
+p * - required
+p # - need 1 of these
